DupesCuisine - everything, need to slip

--- a/.gitignore
+++ b/.gitignore
@@ -418,3 +418,15 @@ WoodenSetFurniture/obj/Release/WoodenSetFurniture.csproj.AssemblyReference.cache
 AdvancedLogistics/obj/Release/AdvancedLogistics.csproj.AssemblyReference.cache
 CustomTiles/obj/Release/CustomTiles.csproj.AssemblyReference.cache
 MoreCuisineVariety/obj/Release/MoreCuisineVariety.csproj.AssemblyReference.cache
+/.vs/ONI_Mods_byRonivan
+/MoreCuisineVariety/bin
+/MoreCuisineVariety/obj
+/CustomTiles/obj/Debug
+/AdvancedLogistics/obj/Debug
+/WoodenSetFurniture/obj/Debug
+/WoodenSetStructures/obj/Debug
+/MoreCuisineVariety/packages.config
+/MoreCuisineVariety/.vs
+/AdvancedLogistics/.vs
+/UpgradeLog.htm
+/UpgradeLog2.htm
