DupesCuisine - original source, initial commit

--- a/.gitignore
+++ b/.gitignore
@@ -418,3 +418,17 @@ WoodenSetFurniture/obj/Release/WoodenSetFurniture.csproj.AssemblyReference.cache
 AdvancedLogistics/obj/Release/AdvancedLogistics.csproj.AssemblyReference.cache
 CustomTiles/obj/Release/CustomTiles.csproj.AssemblyReference.cache
 MoreCuisineVariety/obj/Release/MoreCuisineVariety.csproj.AssemblyReference.cache
+/AdvancedLogistics/obj/Debug
+/AdvancedLogistics/.vs
+/CustomTiles/obj/Debug
+/MoreCuisineVariety/bin/Debug
+/.vs/ONI_Mods_byRonivan/FileContentIndex
+/.vs/ONI_Mods_byRonivan/v17
+/MoreCuisineVariety/.vs
+/MoreCuisineVariety/bin/Release
+/MoreCuisineVariety/obj/Debug
+/MoreCuisineVariety/obj/Release
+/WoodenSetFurniture/obj/Debug
+/WoodenSetStructures/obj/Debug
+/UpgradeLog.htm
+/UpgradeLog2.htm
